# MTV-BE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  readme.md
MSRV/: asgi.py  settings.py  urls.py  wsgi.py
MSRV/apps/sponsorship_proposal/: apps.py  models.py  serializers.py  urls.py  views.py
MSRV/apps/sponsorship_proposal/migrations/: 0001_initial.py
MSRV/apps/sponsorship_proposal/models_folder/: sponsorship_proposal.py
MSRV/apps/sponsorship_proposal/routers/: sponsorship_proposal.py
MSRV/apps/sponsorship_proposal/serializers_folder/: sponsorship_proposal.py
MSRV/apps/sponsorship_proposal/views_folder/: sponsoship_proposal.py
MSRV/apps/sr_activities/: apps.py  models.py  serializers.py  urls.py  views.py
MSRV/apps/sr_activities/migrations/: 0001_initial.py  0002_scientificresearch_time_volume.py  0003_alter_scientificresearch_banner_and_more.py  0004_scientificresearch_data.py
MSRV/apps/sr_activities/models_folder/: scientific_research.py  scientific_research_activities.py
MSRV/apps/sr_activities/routers/: scientific_research.py  scientific_research_activities.py
MSRV/apps/sr_activities/serializers_folder/: __init__.py  scientific_research.py  scientific_research_activities.py
MSRV/apps/user/: apps.py  models.py  serializers.py  urls.py  views.py
MSRV/apps/user/models_folder/: user.py  (+3 more)
MSRV/apps/utils/: api_clone_video.py  constant.py  data_test.json  enum_type.py  generate_password.py  role.py  send_email.py  swagger.py  template_mail.py
MSRV/engine/: apps.py
database/: docker-compose.yml
(+23 files in other folders)
