[project]
name = "msrv"
version = "0.1.0"
description = ""
authors = [
    {name = "NguyenTVy24",email = "thanhvy24042002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-rest-swagger (>=2.2.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "django (>=5.1.6,<6.0.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "firebase-admin (>=6.6.0,<7.0.0)",
    "pusher (>=3.3.3,<4.0.0)",
    "django-ratelimit (>=4.1.0,<5.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
